--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="src/assets/icons/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Durak card game"/>
-    <link rel="apple-touch-icon" href="src/assets/image/logo128.png"/>
-    <!--
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="src/assets/icons/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Durak card game" />
+        <link rel="apple-touch-icon" href="src/assets/image/logo128.png" />
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="src/assets/manifest.json"/>
+        <link rel="manifest" href="src/assets/manifest.json" />
 
-    <!-- Google fonts    -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap" rel="stylesheet">
-    <title>Durachok</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run Durachok.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+        <!-- Google fonts    -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap" rel="stylesheet" />
+        <title>Durachok</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run Durachok.</noscript>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
-
